fix invisible photo

--- a/style/style.css
+++ b/style/style.css
@@ -356,8 +356,10 @@ p {
     background-position: center;
     background-repeat: no-repeat;
     background-size:100%;
-
+    
 }
+
+
 
 
 
@@ -501,6 +503,7 @@ p {
     width: 100vw;
     height: 100vh;
     top: -7.5vw;
+    
 
   }
   .about-me-header {
@@ -511,6 +514,7 @@ p {
     position: relative;
     display: flex;
     margin: auto;
+    
     max-width: 1700px;
     background-image:image-set(url("../assets/backgroundproject.avif") type("image/avif"),
     url("../assets/backgroundproject.webp") type("image/webp"));
@@ -523,6 +527,7 @@ p {
 .card-about-me #about-img{
     width: 400px;
     height: 500px;
+    text-align: center;
     border-radius: 76px;
     background: url(../assets/myphotoabout.jpg);
     background-size: cover;
@@ -540,24 +545,27 @@ p {
     margin-top: 5rem;
     font-size: 3rem;
     color: #FFF;
-    
+  
 }
+
 
 .card-about-me #content-about-me h3{
     margin: 10rem 0 10rem 0;
     font-size: 5rem;
     color: #FFD700;
-    
+  
 }
 
 .card-about-me #content-about-me #technologies{
     display: flex;
     list-style: none;
+ 
 }
 
 .card-about-me #content-about-me #technologies li img{
     width: 100px;
     height: 100px;
+    
 }
 
 
@@ -785,7 +793,7 @@ p {
         max-width: 340px;
         max-height: 280px;
         border-radius: 76px;
-        background: url(../assets/photo_2024-01-06_13-51-23.jpg);
+        background: url(../assets/myphotoabout.jpg);
         background-size: cover;
     }
     .card-about-me #content-about-me p{
